Readability fixes; added installation guide

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -80,11 +80,16 @@ h1 {
 
 h2 {
   padding-bottom: 10px;
+  margin-top: 48px;
   font-size: 32px;
   background: url('../images/bg_hr.png') repeat-x bottom;
 }
+	header h2 {
+		margin-top: 0;
+	}
 
 h3 {
+  margin: 24px 0 0 0;
   font-size: 24px;
 }
 
@@ -129,7 +134,9 @@ a {
   color: #0069ba;
   text-shadow: #0090ff 0px 0px 2px;
 }
-
+footer a {
+	color: #49f;
+}
 footer a:hover {
   color: #43adff;
   text-shadow: #0090ff 0px 0px 2px;
@@ -177,6 +184,7 @@ pre, code {
 pre {
   width: 100%;
   padding: 10px;
+  margin-top: 5px;
   box-shadow: 0 0 10px rgba(0,0,0,.1);
   overflow: auto;
 }
@@ -204,9 +212,12 @@ ul, ol, dl {
 }
 
 ul li {
-  list-style: square inside;
-  margin-bottom: 10px;
+  list-style: disc inside !important;
+  padding-left: 20px;
 }
+	ul.expanded li {
+		margin-bottom: 15px;
+	}
 
 ol li {
   list-style: decimal inside;
